--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.8.0",
