--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "actions": "^1.3.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
@@ -31,6 +32,7 @@
     "react-hot-loader": "^4.8.0",
     "react-redux": "^6.0.1",
     "redux": "^1.0.0-rc",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "tasks": "0.0.3"
   }
 }
