--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.8.0",
     "react-redux": "^6.0.1",
