--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "node-sass": "^4.11.0",
+    "react-style-loader": "^2.3.0",
     "redux-devtools": "^2.1.5",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -36,6 +37,7 @@
     "react-redux": "^6.0.1",
     "redux": "^1.0.0-rc",
     "redux-devtools-extension": "^2.13.8",
+    "scss-loader": "0.0.1",
     "tasks": "0.0.3"
   }
 }
