--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo_list",
   "version": "1.0.0",
-  "description": "",
+  "description": "todo_list",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development"
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.1",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^1.0.1",
@@ -22,22 +22,26 @@
     "redux-devtools": "^2.1.5",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
     "actions": "^1.3.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
-    "react": "^16.5.2",
+    "react": "^16.8.6",
     "react-addons-update": "^15.6.2",
-    "react-dom": "^16.5.2",
-    "react-hot-loader": "^4.8.0",
-    "react-redux": "^6.0.1",
-    "redux": "^1.0.0-rc",
+    "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.8.4",
+    "react-redux": "^4.4.10",
+    "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.8",
     "scss-loader": "0.0.1",
     "tasks": "0.0.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/SofiaS1604/todolist.git"
   }
 }
