--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.8.4",
     "react-redux": "^4.4.10",
+    "react-router": "^5.0.0",
+    "reducers": "^3.0.0-alpha",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "scss-loader": "0.0.1",
     "tasks": "0.0.3"
   },
