--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "actions": "^1.3.0",
     "lodash": "^4.17.11",
+    "mini-css-extract-plugin": "^0.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-addons-update": "^15.6.2",
